// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. four child elements 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-2
      </Text>
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <Text>
      support-1
    </Text>
  </View>,
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View>
    <Text>
      support-2
    </Text>
  </View>,
]
`;

exports[`2. tablet - four child elements 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        support-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        support-2
      </Text>
    </View>
  </View>
</View>
`;
